fix header z-indexing and link logo to home page; slightly adjust card hover effect

--- a/src/components/Deck/TarotCard/index.css
+++ b/src/components/Deck/TarotCard/index.css
@@ -14,7 +14,7 @@
   @media (hover: hover) {
     &:hover {
       img {
-        transform: translateY(-10px);
+        transform: translateY(-15px);
       }
       img.converged {
         transform: translate(3px, -10px) rotate(5deg);
